--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ Brotli==1.1.0
 dj-database-url==2.1.0
 Django==4.2.5
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 gunicorn==21.2.0
 install==1.3.5
 packaging==23.1
 psycopg2-binary==2.9.7
+PyJWT==2.8.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
